--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
 
 
-        <div class="container text-center justify-content-center">
-        <p>Section Name</p>
+        <div class="container text-center j">
+        <p class="">Section Name</p>
           <div class="row">
             <div class="col">
               <div class="card cardperso" style="width: 18rem;">
