--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
       <div>
         <div class="d-flex justify-content-center"><img src="Captura de pantalla 2023-02-22 002328.png" alt=""></div>
         <ul class="d-flex flex-row nav">
-          <li class="m-1 fw-bold"><a href="" class="text-decoration-none">Términos y Aviso de privacidad</a></li>
-          <li class="m-1 fw-bold"><a href="" class="text-decoration-none">Envíanos tus comentarios</a></li>
-          <li class="m-1 fw-bold"><a href="" class="text-decoration-none">Ayuda</a></li>
+          <li class="m-1 fw-bold"><a href="#" class="text-decoration-none">Términos y Aviso de privacidad</a></li>
+          <li class="m-1 fw-bold"><a href="#" class="text-decoration-none">Envíanos tus comentarios</a></li>
+          <li class="m-1 fw-bold"><a href="#" class="text-decoration-none">Ayuda</a></li>
           <li class="m-1 text-light">©1996-2023, Amazon.com, Inc. o sus filiales</li>
         </ul>
       </div>
